<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingStart="0dp"
    android:paddingBottom="3dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_customer"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/nama"
            android:layout_marginStart="20dp"
            android:labelFor="@id/etNamaTambahCustomer"
            />

        <EditText
            android:id="@+id/etNamaTambahCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/no_telepon"
            android:layout_marginStart="20dp"
            />

        <EditText
            android:id="@+id/etNoTeleponTambahCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/alamat"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etAlamatTambahCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="200dp"-->
<!--        android:padding="30dp">-->
<!--        <com.google.android.gms.maps.MapView-->
<!--            android:id="@+id/mapView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            />-->
<!--    </LinearLayout>-->



</LinearLayout>