<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.trackersales.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_createOrderFragment"
            app:destination="@id/createOrderFragment" />
        <action
            android:id="@+id/action_navigation_home_to_check_in_Fragment"
            app:destination="@id/check_in_Fragment" />
        <action
            android:id="@+id/action_navigation_home_to_pushNotification"
            app:destination="@id/pushNotification" />
        <action
            android:id="@+id/action_navigation_home_to_historyOrder"
            app:destination="@id/historyOrder" />
        <action
            android:id="@+id/action_navigation_home_to_detail_User"
            app:destination="@id/detail_User" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.trackersales.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.trackersales.ui.customers.CustomersFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_customer" />
    <fragment
        android:id="@+id/salesMapFragment"
        android:name="com.example.trackersales.SalesMapFragment"
        android:label="fragment_sales_map"
        tools:layout="@layout/fragment_sales_map" />
    <fragment
        android:id="@+id/createOrderFragment"
        android:name="com.example.trackersales.CreateOrder"
        android:label="fragment_create_order"
        tools:layout="@layout/fragment_create_order" />
    <fragment
        android:id="@+id/check_in_Fragment"
        android:name="com.example.trackersales.Check_in_Fragment"
        android:label="fragment_check_in_"
        tools:layout="@layout/fragment_check_in_" />
    <fragment
        android:id="@+id/pushNotification"
        android:name="com.example.trackersales.PushNotification"
        android:label="fragment_push_notification"
        tools:layout="@layout/fragment_push_notification" />
    <fragment
        android:id="@+id/historyOrder"
        android:name="com.example.trackersales.ui.HistoryOrder.HistoryOrder"
        android:label="fragment_history_order"
        tools:layout="@layout/fragment_history_order" />
    <fragment
        android:id="@+id/detail_User"
        android:name="com.example.trackersales.Detail_User"
        android:label="fragment_detail_user"
        tools:layout="@layout/fragment_detail_user" />
    <fragment
        android:id="@+id/detailSales"
        android:name="com.example.trackersales.DetailSales"
        android:label="fragment_detail_sales"
        tools:layout="@layout/fragment_detail_sales" />
    <fragment
        android:id="@+id/listHistoryPerjalanan"
        android:name="com.example.trackersales.ListHistoryPerjalanan"
        android:label="fragment_list_history_perjalanan"
        tools:layout="@layout/fragment_list_history_perjalanan" />
    <fragment
        android:id="@+id/historyMap"
        android:name="com.example.trackersales.HistoryMap"
        android:label="fragment_history_map"
        tools:layout="@layout/fragment_history_map" />
    <fragment
        android:id="@+id/detailOrderHistory"
        android:name="com.example.trackersales.DetailOrderHistory"
        android:label="fragment_detail_order_history"
        tools:layout="@layout/fragment_detail_order_history" />
    <fragment
        android:id="@+id/createAccount"
        android:name="com.example.trackersales.CreateAccount"
        android:label="fragment_create_account"
        tools:layout="@layout/fragment_create_account" />
    <fragment
        android:id="@+id/task"
        android:name="com.example.trackersales.ui.task.Task"
        android:label="fragment_task"
        tools:layout="@layout/fragment_task" />
    <fragment
        android:id="@+id/addTask"
        android:name="com.example.trackersales.ui.task.AddTask"
        android:label="fragment_add_task"
        tools:layout="@layout/fragment_add_task" />


</navigation>